--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-11-25 19:53+0100\n"
+"POT-Creation-Date: 2025-01-21 14:22+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -595,6 +595,24 @@ msgstr "Esiste già un elemento con lo stesso nome"
 msgid "E-Mail"
 msgstr "E-mail"
 
+msgid "Describes briefly what this form is about"
+msgstr "Descrive brevemente il contenuto di questo modulo"
+
+msgid "Detailed Explanation"
+msgstr "Spiegazione dettagliata"
+
+msgid "Describes in detail how this form is to be filled"
+msgstr "Descrive dettagliatamente come compilare questo modulo"
+
+msgid "Form PDF"
+msgstr "Modulo PDF"
+
+msgid "Group"
+msgstr "Gruppo"
+
+msgid "Used to group this form in the overview"
+msgstr "Utilizzato per raggruppare questo modulo nella panoramica"
+
 msgid "Art"
 msgstr "Arte"
 
@@ -845,9 +863,6 @@ msgstr "URL"
 
 msgid "Url pointing to another website"
 msgstr "URL che punta a un altro sito web"
-
-msgid "Group"
-msgstr "Gruppo"
 
 msgid "Used to group this link in the overview"
 msgstr "Utilizzato per raggruppare questo collegamento nella panoramica"
@@ -1687,6 +1702,12 @@ msgstr "Codice Analytics"
 msgid "JavaScript for web statistics support"
 msgstr "JavaScript per il supporto delle statistiche web"
 
+msgid "Analytics URL"
+msgstr "URL Analytics"
+
+msgid "URL pointing to the analytics page"
+msgstr "URL che punta alla pagina di analisi"
+
 msgid "Cantonal holidays"
 msgstr "Festività cantonali"
 
@@ -2301,12 +2322,16 @@ msgstr "Modulo esterno"
 msgid "New external form"
 msgstr "Nuovo modulo esterno"
 
+msgid "Document form"
+msgstr "Modulo documento"
+
 msgid "Do you really want to delete this submission window?"
 msgstr "Vuoi davvero eliminare questa finestra di invio?"
 
 msgid ""
 "Submissions associated with this submission window will be deleted as well."
 msgstr ""
+"Gli invii associati a questa finestra di invio verranno eliminati anche."
 
 msgid "Delete submission window"
 msgstr "Elimina la finestra di invio"
@@ -2771,9 +2796,6 @@ msgstr ""
 
 msgid "Delete content"
 msgstr "Cancellare il contenuto"
-
-msgid "Photo album. Will be shown at the end of content."
-msgstr "Album fotografico. Sarà mostrato alla fine del contenuto."
 
 msgid "Photo album"
 msgstr "Album fotografico"
@@ -4575,6 +4597,8 @@ msgid ""
 "Thank you for filling out this survey. If there's anything you'd like to "
 "change, click on the \"Edit\"-Button below."
 msgstr ""
+"Grazie per aver compilato questo sondaggio. Se c'è qualcosa che desideri "
+"cambiare, fai clic sul pulsante \"Modifica\" qui sotto."
 
 msgid "No surveys defined yet."
 msgstr "Ancora nessun sondaggio definito."
@@ -5159,6 +5183,15 @@ msgstr "${address} disiscritto con successo"
 msgid "${address} could not be unsubscribed, wrong token"
 msgstr "Impossibile annullare l'iscrizione di ${address}, token errato"
 
+msgid "Added a new form"
+msgstr "Aggiunto un nuovo modulo"
+
+msgid "New Document Form"
+msgstr "Nuovo modulo documento"
+
+msgid "Edit Document Form"
+msgstr "Modifica modulo documento"
+
 msgid "Moves the topic and all its sub topics to the given destination."
 msgstr ""
 "Sposta l'argomento e tutti i suoi sottoargomenti nella destinazione indicata."
@@ -5300,9 +5333,6 @@ msgstr "Sono rimasti ${count} posti disponibili"
 
 msgid "A form with this name already exists"
 msgstr "Un modulo con questo nome esiste già"
-
-msgid "Added a new form"
-msgstr "Aggiunto un nuovo modulo"
 
 msgid "New Form"
 msgstr "Nuovo modulo"
@@ -5970,7 +6000,7 @@ msgid "Edit Submission Window"
 msgstr "Modifica la finestra di invio"
 
 msgid "The submission window and all associated submissions were deleted"
-msgstr ""
+msgstr "La finestra di invio e tutti gli invii associati sono stati eliminati"
 
 msgid "Added a new text module"
 msgstr "Aggiunto un nuovo modulo di testo"
@@ -6189,3 +6219,6 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid "Photo album. Will be shown at the end of content."
+#~ msgstr "Album fotografico. Sarà mostrato alla fine del contenuto."
