--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1069,6 +1069,12 @@ msgstr "Passez une bonne journée!"
 msgid "Hello"
 msgstr "Bonjour"
 
+msgid "Hi Admin,"
+msgstr "Bonjour administrateur"
+
+msgid "The user with the address ${address} just unsubscribed from the newsletter subscriber list."
+msgstr "L'utilisateur dont l'adresse est ${address} vient de se désinscrire de la liste des abonnés à la lettre d'information."
+
 msgid ""
 "You are receiving this mail because you subscribed to the following "
 "newsletter:"
