--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1070,6 +1070,12 @@ msgstr "Ti auguro una buona giornata!"
 msgid "Hello"
 msgstr "Ciao"
 
+msgid "Hi Admin,"
+msgstr "Salve amministratore"
+
+msgid "The user with the address ${address} just unsubscribed from the newsletter subscriber list."
+msgstr "L'utente con l'indirizzo ${indirizzo} si è appena cancellato dalla lista degli iscritti alla newsletter."
+
 msgid ""
 "You are receiving this mail because you subscribed to the following "
 "newsletter:"
