--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-07-02 14:42+0200\n"
+"POT-Creation-Date: 2025-01-24 19:04+0100\n"
 "PO-Revision-Date: 2022-03-07 13:56+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -44,12 +44,6 @@ msgstr "Allgemein"
 msgid "Title"
 msgstr "Titel"
 
-msgid "Text"
-msgstr "Text"
-
-msgid "Multiline"
-msgstr "Mehrzeilig"
-
 msgid "E-Mail"
 msgstr "E-Mail"
 
@@ -58,6 +52,18 @@ msgstr "Webseite"
 
 msgid "Video Link"
 msgstr "Video Link"
+
+msgid "Text"
+msgstr "Text"
+
+msgid "Limited text"
+msgstr "Begrenzter Text"
+
+msgid "Numbers-only textfield (regex)"
+msgstr "Textfeld mit nur Zahlen (regex)"
+
+msgid "Multiline with optional number of rows"
+msgstr "Mehrzeilig mit optionaler Anzahl Zeilen"
 
 msgid "Comment"
 msgstr "Kommentar"
@@ -95,6 +101,9 @@ msgstr "Bild"
 msgid "Document"
 msgstr "Dokument"
 
+msgid "Documents (Multiple upload)"
+msgstr "Dokumente (Mehrfachupload)"
+
 msgid "Numbers"
 msgstr "Zahlen"
 
@@ -103,6 +112,9 @@ msgstr "Alter"
 
 msgid "Percentage"
 msgstr "Prozent"
+
+msgid "Amount with Price"
+msgstr "Betrag mit Preis"
 
 msgid "Extended"
 msgstr "Erweitert"
@@ -118,6 +130,9 @@ msgstr "UID Nummer"
 
 msgid "Swiss vat number"
 msgstr "MWST Nummer"
+
+msgid "Password"
+msgstr "Passwort"
 
 msgid "Markdown"
 msgstr "Markdown"
@@ -176,10 +191,12 @@ msgstr ""
 "kostenpflichtiges Feld definiert ist."
 
 #, python-format
-msgid "The '{label}' group is empty and will not be visible. Either "
-"remove the empty group or add fields to it."
-msgstr "Die Gruppe '{label}' ist leer und wird nicht sichtbar sein. "
-"Entweder entfernen Sie die leere Gruppe oder fügen Felder hinzu."
+msgid ""
+"The '{label}' group is empty and will not be visible. Either remove the "
+"empty group or add fields to it."
+msgstr ""
+"Die Gruppe '{label}' ist leer und wird nicht sichtbar sein. Entweder "
+"entfernen Sie die leere Gruppe oder fügen Felder hinzu."
 
 #, python-format
 msgid ""
@@ -191,11 +208,9 @@ msgstr ""
 
 #, python-format
 msgid ""
-"Invalid field type for field '{label}'. Please use the plus-icon to add "
+"Invalid field type for field '${label}'. Please use the plus-icon to add "
 "allowed field types."
 msgstr ""
-"Ungültiger Feldtyp für Feld '{label}'. Bitte verwenden Sie das Plus-Symbol "
-"um erlaubte Feldtypen hinzuzufügen."
 
 msgid "Not a valid phone number."
 msgstr "Ungültige Telefonnummer."
@@ -244,3 +259,14 @@ msgstr "Keine Ergebnisse gefunden:"
 
 msgid "Select Some Options"
 msgstr "Mehrere Optionen auswählen"
+
+#~ msgid "Multiline"
+#~ msgstr "Mehrzeilig"
+
+#, python-format
+#~ msgid ""
+#~ "Invalid field type for field '{label}'. Please use the plus-icon to add "
+#~ "allowed field types."
+#~ msgstr ""
+#~ "Ungültiger Feldtyp für Feld '{label}'. Bitte verwenden Sie das Plus-"
+#~ "Symbol um erlaubte Feldtypen hinzuzufügen."
