Org: Collect inactive email addresses daily and indicate delivery failures for newsletter recipients
TYPE: Feature
LINK: ogc-1896

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2809,6 +2809,9 @@ msgstr ""
 msgid "Delete content"
 msgstr "Inhalt löschen"
 
+msgid "Photo album. Will be shown at the end of content."
+msgstr "Fotoalbum. Wird am Ende des Inhalts angezeigt."
+
 msgid "Photo album"
 msgstr "Fotoalbum"
 
@@ -6236,6 +6239,9 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
+
+msgid "This recipient has delivery failures, including hard bounces, invalid email addresses, spam complaints, manual deactivations, or being blocked. We recommend unsubscribing it from the list."
+msgstr "Dieser Empfänger hat Zustellungsfehler, einschließlich Hard Bounces, ungültige E-Mail-Adresse, Spam-Beschwerde, manuelle Deaktivierung oder wird blockiert. Wir empfehlen, ihn von der Liste abzumelden."
 
 #~ msgid "Describes in detail how this form is to be used"
 #~ msgstr "Beschreibt detailliert wie dieses Formular benutzt werden soll"
