--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1069,6 +1069,12 @@ msgstr "Passez une bonne journée!"
 msgid "Hello"
 msgstr "Bonjour"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Notifier le désabonnement à la lettre d'information"
+
+msgid "Send an email notification when a user unsubscribes from the newsletter"
+msgstr "Envoyer une notification par courrier électronique lorsqu'un utilisateur se désinscrit de la lettre d'information"
+
 msgid "Hi Admin,"
 msgstr "Bonjour administrateur"
 
