--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1070,6 +1070,12 @@ msgstr "Ti auguro una buona giornata!"
 msgid "Hello"
 msgstr "Ciao"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Notifica di annullamento dell'iscrizione alla newsletter"
+
+msgid "Send an email notification when a user unsubscribes from the newsletter"
+msgstr "Inviare una notifica via e-mail quando un utente si cancella dalla newsletter"
+
 msgid "Hi Admin,"
 msgstr "Salve amministratore"
 
