--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -3855,6 +3855,12 @@ msgstr "Heute keine Reservationen."
 msgid "Have a great day!"
 msgstr "Wir wünschen Ihnen einen schönen Tag!"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Benachrichtigung bei Abmeldung vom Newsletter"
+
+msgid "Send an email notification when a user unsubscribes from the newsletter"
+msgstr "Sende eine E-Mail-Benachrichtigung, wenn sich ein Benutzer vom Newsletter abmeldet"
+
 msgid "Hi Admin,"
 msgstr "Hallo Administrator"
 
