--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -3856,6 +3856,12 @@ msgstr "Aucune réservation aujourd'hui."
 msgid "Have a great day!"
 msgstr "Passez une bonne journée!"
 
+msgid "Notify on newsletter unsubscription"
+msgstr "Notifier le désabonnement à la lettre d'information"
+
+msgid "Send an email notification when a user unsubscribes from the newsletter"
+msgstr "Envoyer une notification par courrier électronique lorsqu'un utilisateur se désinscrit de la lettre d'information"
+
 msgid "Hi Admin,"
 msgstr "Bonjour administrateur"
 
