--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-24 19:04+0100\n"
+"POT-Creation-Date: 2025-01-27 10:34+0100\n"
 "PO-Revision-Date: 2022-03-07 13:56+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -52,6 +52,9 @@ msgstr "Webseite"
 
 msgid "Video Link"
 msgstr "Video Link"
+
+msgid "Text fields"
+msgstr "Textfelder"
 
 msgid "Text"
 msgstr "Text"
