--- a/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-01-24 19:04+0100\n"
+"POT-Creation-Date: 2025-01-27 10:34+0100\n"
 "PO-Revision-Date: 2022-03-07 13:55+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: Italian\n"
@@ -49,6 +49,9 @@ msgstr "Sito web"
 
 msgid "Video Link"
 msgstr "Link video"
+
+msgid "Text fields"
+msgstr "Campi di testo"
 
 msgid "Text"
 msgstr "Testo"
