Adds success message in case of no newsletter categories defined

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -5512,6 +5512,11 @@ msgstr "Willkommen beim ${org} Newsletter"
 
 #, python-format
 msgid ""
+"Success! We have added ${address} to the list of recipients."
+msgstr ""
+"Erfolg! Wir haben ${address} zur Liste der Empfänger hinzugefügt."
+
+msgid ""
 "Success! We have added ${address} to the list of recipients. Subscribed "
 "categories are ${subscribed}."
 msgstr ""
